# Nore

./: .gitignore  LICENSE  README.md  pyproject.toml
src/nore/: list.py  main.py  new.py  util.py
tests/: test_main.py  test_nore.py  test_util.py
