[project]
name = "nore"
version = "0.1.1"
description = "Download .gitignore files from the github/gitignore repo."
license = "MIT"
authors = [
    { name = "Trent Oliver", email = "9102481+tcoliver@users.noreply.github.com" }
]
homepage = "https://github.com/tcoliver/nore"
repository = "https://github.com/tcoliver/nore"
keywords = ["git", ".gitignore", "VCS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities"
]
readme = "README.md"
include = [
    "LICENSE"
] 
dependencies = [
    "pydantic~=1.8.2",
    "click~=8.0.1",
]
requires-python = ">= 3.9"

[project.scripts]
"nore" = "nore.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest~=8.3.2",
    "pyright~=1.1.375",
]

[tool.rye.scripts]
fmt = "rye fmt"
lint = "rye lint --fix"
check = "pyright"
test = "rye test"
all = { chain = ["fmt", "lint", "check", "test"] }

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["nore"]

[tool.pyright]
venvPath = "."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.9"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nore"]
